# vault-forecast

./: .gitignore  README.md  pyproject.toml
data/processed/: market_weighted_features.parquet  model_results.parquet  predictions_last_24h.parquet  vault_hourly.parquet
notebooks/: eda.ipynb  model_results.ipynb
scripts/: fetch_vault_hourly.py  fetch_weighted_market_features.py  predict_last_24h.py  train_model.py
src/: config.py
src/modeling/: features.py
src/morpho/: gql_client.py  models.py  queries.py
