[project]
name = ""vault-return-forecast""
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.3.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2",
  "scikit-learn>=1.5.0"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
